--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "type": "module",
     "scripts": {
         "start": "node scrape.js",
-        "server": "node server.js"
+        "server": "node server.js",
+        "worker": "node worker.js"
     },
     "dependencies": {
         "@google/genai": "^1.34.0",
