--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "scripts": {
         "start": "node scrape.js",
         "server": "node server.js",
-        "worker": "node worker.js"
+        "worker": "node worker.js",
+        "orchestrator": "node orchestrator.js"
     },
     "dependencies": {
         "@google/genai": "^1.34.0",
