--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
         "start": "node scrape.js",
         "server": "node server.js",
         "worker": "node worker.js",
-        "orchestrator": "node orchestrator.js"
+        "orchestrator:dev": "node orchestrator.js",
+        "orchestrator": "pm2 start orchestrator.js --name orchestrator --",
+        "orchestrator:stop": "pm2 stop orchestrator",
+        "orchestrator:restart": "pm2 restart orchestrator",
+        "orchestrator:logs": "pm2 logs orchestrator"
     },
     "dependencies": {
         "@google/genai": "^1.34.0",
         "@vercel/blob": "^2.0.0",
         "dotenv": "^17.2.3",
         "express": "^5.2.1",
-        "playwright": "^1.42.0"
+        "playwright": "^1.42.0",
+        "pm2": "^6.0.14"
     }
 }
