--- a/package.json
+++ b/package.json
@@ -5,12 +5,7 @@
     "scripts": {
         "start": "node scrape.js",
         "server": "node server.js",
-        "worker": "node worker.js",
-        "orchestrator:dev": "node orchestrator.js",
-        "orchestrator": "pm2 start orchestrator.js --name orchestrator --",
-        "orchestrator:stop": "pm2 stop orchestrator",
-        "orchestrator:restart": "pm2 restart orchestrator",
-        "orchestrator:logs": "pm2 logs orchestrator"
+        "worker": "node worker.js"
     },
     "dependencies": {
         "@google/genai": "^1.34.0",
