--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
         "@vercel/blob": "^2.0.0",
         "dotenv": "^17.2.3",
         "express": "^5.2.1",
-        "playwright": "^1.42.0",
-        "pm2": "^6.0.14"
+        "playwright": "^1.42.0"
     }
 }
